# dataset-generator

./: .gitignore  Pipfile  README.md  dataset_generator.py  main.py  pyproject.toml  requirements.txt
configs/: ExtremeBigSizeFocusedDataset.json  ExtremeSmallSizeFocusedDataset.json  HighFreqDataset.json  README.md  RecencyFocusedDataset.json  SizeFocusedDataset.json
datasetgen/: functions.py  generator.py  utils.py
datasetgen/ui/: __init__.py  dash.py  functions.py  utils.py
docs/: conf.html  conf.py  genindex.html  index.html  move_githubpages.sh  objects.inv  py-modindex.html  search.html  searchindex.js  sitemap.xml
docs/_modules/: index.html
docs/_modules/datasetgen/: functions.html  generator.html  utils.html
docs/_modules/datasetgen/ui/: dash.html  functions.html  utils.html
docs/_sources/: conf.py.txt
docs/_sources/autoapi/: index.rst.txt
docs/_sources/autoapi/datasetgen/: index.rst.txt
docs/_sources/autoapi/datasetgen/functions/: index.rst.txt
docs/_sources/autoapi/datasetgen/generator/: index.rst.txt
docs/_sources/autoapi/datasetgen/ui/: index.rst.txt
docs/_sources/autoapi/datasetgen/utils/: index.rst.txt
docs/autoapi/: index.html
docs/autoapi/datasetgen/: index.html
docs/autoapi/datasetgen/functions/: index.html
docs/autoapi/datasetgen/generator/: index.html
docs/autoapi/datasetgen/ui/: index.html
docs/autoapi/datasetgen/ui/dash/: index.html
docs/autoapi/datasetgen/ui/functions/: index.html
docs/autoapi/datasetgen/utils/: index.html
docs/source/: conf.py  index.rst  move_githubpages.sh
(+4 files in other folders)
