[tool.poetry]
name = "dataset-generator"
version = "0.1.0"
description = ""
authors = ["MircoT <MircoT@users.noreply.github.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
dash = "^1.12"
pandas = "^1.0"
dash-bootstrap-components = "^0.9.2"

[tool.poetry.dev-dependencies]
pylama = "^7.7"
autopep8 = "^1.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
